# os_labs

./: CMakeLists.txt  README.md
cp/: CMakeLists.txt  main.cpp
cp/include/: mck-k.h  mck_allocator.h  pow_allocator.h  pow_of_two_allocator.h
cp/src/: mck-k.cpp  mck_allocator.c  pow_allocator.c  pow_of_two_allocator.cpp
lab1/: CMakeLists.txt  main.c  main.cpp
lab1/include/: lab1.h
lab1/src/: child.cpp  lab1.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: sort.h
lab2/src/: sort.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: lab3.h  shared_memory.h  utils.h
lab3/src/: child.cpp  lab3.cpp  shared_memory.cpp
lab4/: dynamic_main.cpp  static_main.cpp
lab4/include/: lib.h
lab4/src/: lib1.cpp  lib2.cpp
lab5_7/: CMakeLists.txt
lab5_7/include/: client_util.h  topology.h
lab5_7/src/: client.cpp  client_util.cpp  node.cpp
reports/docx/: cp.docx  lab1.docx  lab2.docx  lab3.docx  lab4.docx  lab5_7.docx  lab8.docx
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_lib1_test.cpp  lab4_lib2_test.cpp  lab5_7_test.cpp
